<resources>
    <string name="app_name">Deportivo Cierva</string>
    <string name="titulo">Club Deportivo IES CIERVA</string>
    <string name="labelNombre">Nombre</string>
    <string name="labelEdad">Edad</string>
    <string name="salirBtn">Salir</string>
    <string name="btAcercaDe">Acerca de</string>
    <string name="btJugadores">Jugadores</string>
    <string name="version_app">Versión 1.0</string>
    <string name="descripcion_app">App en la que se gestiona el conocido Club Deportivo IES CIERVA</string>
    <string name="jugadores_titulo">JUGADORES</string>
    <string name="id">ID</string>
    <string name="apellidos">Apellido1 y Apellido2</string>
    <string name="genero">Genero</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="altura">Altura</string>
    <string name="telf">Teléfono</string>
    <string name="correo">Correo Electrónico</string>
    <string name="observaciones">Observaciones</string>
    <string name="info">Info</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="formulario">Formulario</string>
    <string name="equipos">Equipos</string>
    <string name="informes">Informes</string>
    <string name="categoria">Categoria :</string>
    <string name="nombre">Nombre :</string>
    <string name="patrocinador">Patrocinador :</string>
    <string name="modalidad">Modalidad :</string>
    <string name="federado">Federado :</string>
    <string name="d_a_de_partido">Día de partido :</string>
    <string name="hora_partido">Hora partido :</string>
    <string name="entrenamientos">Entrenamientos :</string>
    <string name="persona_contacto">Persona contacto :</string>
    <string name="tel_fono_contacto">Teléfono contacto :</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="equipo_image">\n</string>
    <string name="dia_partido" />
    <string name="numero_contacto">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>