<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral80"
    tools:context=".Jugadores">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="JUGADORES"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="326dp"
        android:layout_height="591dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/id" />

            <EditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/labelNombre"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/apellidos" />

            <TextView
                android:id="@+id/labelGenero"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/genero"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonMasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/radioButtonFem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino" />

                <RadioButton
                    android:id="@+id/radioButtonOtro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otro" />
            </RadioGroup>

            <EditText
                android:id="@+id/inputFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="@string/fecha_nacimiento" />

            <EditText
                android:id="@+id/inputAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/altura" />

            <EditText
                android:id="@+id/inputTelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/telf" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/correo" />

            <EditText
                android:id="@+id/inputObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/observaciones" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/labelForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/formulario"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/btInfo"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:text="@string/info"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>